updated config of jacoco in pom.xml